--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       }), {})
     );
 
+    // 새로운 상태: 마감 전 금고 금액
+    const [closingVaultAmount, setClosingVaultAmount] = useState('');
+
     // 개수 입력 필드 변경을 처리하는 함수
     const handleQuantityChange = (value, denom) => {
       const cleanValue = value.replace(/[^0-9]/g, ''); // 숫자만 허용
@@ -90,7 +93,8 @@
 
     // 금액 입력 필드 변경을 처리하는 함수
     const handleAmountChange = (value, denom) => {
-      const cleanValue = value.replace(/[^0-9]/g, ''); // 숫자만 허용 (콤마 제거 포함)
+      // 입력된 값에서 숫자 이외의 문자 (콤마 포함) 제거
+      const cleanValue = value.replace(/[^0-9]/g, '');
       const amount = parseInt(cleanValue) || 0;
 
       if (denom.value === 0) { // 0으로 나누는 경우 방지 (화폐 단위에 0은 없지만 방어코드)
@@ -113,7 +117,14 @@
       }));
     };
 
-    // 모든 입력 필드를 초기화하는 함수
+    // 마감 전 금고 금액 입력 필드 변경을 처리하는 함수 (새로운 함수)
+    const handleClosingVaultAmountChange = (e) => {
+      const value = e.target.value.replace(/[^0-9]/g, ''); // 숫자만 허용
+      setClosingVaultAmount(value);
+    };
+
+
+    // 모든 입력 필드를 초기화하는 함수 (새로 추가된 필드 포함)
     const handleReset = () => {
       setQuantities(
         denominations.reduce((acc, denom) => ({
@@ -121,6 +132,7 @@
           [denom.value]: { count: '', amountInput: '' }
         }), {})
       );
+      setClosingVaultAmount(''); // 마감 전 금고 금액 초기화
     };
 
     // 금액 계산 (최적화를 위해 useMemo 사용)
@@ -201,6 +213,21 @@
             >
               초기화
             </button>
+          </div>
+
+          {/* 새로운 섹션: 마감 전 금고 금액 */}
+          <div className="bg-slate-800 rounded-xl p-3 shadow-lg text-white mb-4"> {/* mb-4 추가로 지폐 섹션과 간격 확보 */}
+            <div className="flex justify-between items-center">
+              <h2 className="text-lg font-bold">마감 전 금고 금액</h2>
+              <input
+                type="text"
+                inputMode="numeric"
+                placeholder="0"
+                value={closingVaultAmount === '' ? '' : formatCurrency(parseInt(closingVaultAmount) || 0)}
+                onChange={handleClosingVaultAmountChange}
+                className="w-36 h-8 text-right text-gray-800 text-lg font-extrabold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+              />
+            </div>
           </div>
 
           {/* 지폐 섹션 */}
