--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       }));
     };
 
-    // 마감 전 금고 금액 입력 필드 변경을 처리하는 함수 (새로운 함수)
+    // 마감 전 금고 금액 입력 필드 변경을 처리하는 함수
     const handleClosingVaultAmountChange = (e) => {
       const value = e.target.value.replace(/[^0-9]/g, ''); // 숫자만 허용
       setClosingVaultAmount(value);
@@ -216,7 +216,7 @@
           </div>
 
           {/* 새로운 섹션: 마감 전 금고 금액 */}
-          <div className="bg-slate-800 rounded-xl p-3 shadow-lg text-white mb-4"> {/* mb-4 추가로 지폐 섹션과 간격 확보 */}
+          <div className="bg-slate-800 rounded-xl p-3 shadow-lg text-white mb-4">
             <div className="flex justify-between items-center">
               <h2 className="text-lg font-bold">마감 전 금고 금액</h2>
               <input
