--- a/index.html
+++ b/index.html
@@ -225,27 +225,30 @@
                 placeholder="0"
                 value={closingVaultAmount === '' ? '' : formatCurrency(parseInt(closingVaultAmount) || 0)}
                 onChange={handleClosingVaultAmountChange}
-                className="w-36 h-8 text-right text-gray-800 text-lg font-extrabold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+                // 배경색 및 글자색 수정
+                className="w-36 h-8 text-right text-white text-lg font-extrabold bg-slate-900 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
               />
             </div>
           </div>
 
           {/* 지폐 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            <h2 className="text-base font-bold text-gray-800 mb-1">💵 지폐</h2>
+            {/* 💵 지폐 제목 삭제 */}
             {denominations.filter(d => d.type === 'bill').map(renderItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
-              <span>지폐 소계:</span>
+              {/* 💵 지폐 소계 수정 */}
+              <span>💵 지폐 소계:</span>
               <span>{formatCurrency(totals.billTotal)}</span>
             </div>
           </div>
 
           {/* 동전 섹션 */}
           <div className="bg-white rounded-xl p-2 shadow-md border border-gray-200">
-            <h2 className="text-base font-bold text-gray-800 mb-1">🪙 동전</h2>
+            {/* 🪙 동전 제목 삭제 */}
             {denominations.filter(d => d.type === 'coin').map(renderItem)}
             <div className="mt-2 pt-2 flex justify-between items-center font-bold text-sm text-gray-800">
-              <span>동전 소계:</span>
+              {/* 🪙 동전 소계 수정 */}
+              <span>🪙 동전 소계:</span>
               <span>{formatCurrency(totals.coinTotal)}</span>
             </div>
           </div>
